--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
         <button type="button" id="bouton"><i class="fas fa-bars"></i></button>
         <ul>
             <li><a href="#section1">À propos</a></li>
-            <li><a href="#responsive">Responsive</a></li>
-            <li><a href="#section3">Section3</a></li>
-            <li><a href="#description">Description</a></li>
             <li><a href="#exemple">Exemple</a></li>
-            <li>Contacts</li>
+            <li><a href="#formulaire">Contact</a></li>
         </ul>
     </div>
     <!-- !!!!!!!!!!!MENU + SLIDER!!!!!!!!!!!!-->
@@ -28,11 +25,8 @@
             <h2>Projet 1 - Intégration et personnalisation d'une maquette</h2>
             <ul>
                 <li><a href="#section1">À propos</a></li>
-                <li><a href="#responsive">Responsive</a></li>
-                <li><a href="#section3">Section3</a></li>
-                <li><a href="#description">Description</a></li>
                 <li><a href="#exemple">Exemple</a></li>
-                <li>Contacts</li>
+                <li><a href="#formulaire">Contact</a></li>
             </ul>  
         </nav>
         
