shifted the description on the project under the a propos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,10 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body id="top">  
+
+<body id="top">
     <!-- !!!!!!!!!!!!!! MENU!!!!!!!!!! -->
-    <div id="menu">     
+    <div id="menu">
         <button type="button" id="bouton"><i class="fas fa-bars"></i></button>
         <ul>
             <li><a href="#section1">À propos</a></li>
@@ -21,17 +23,17 @@
             <li><a href="#formulaire">Contact</a></li>
         </ul>
     </div>
-    <header>    
+    <header>
         <nav>
             <h2>Projet 1 - Intégration et personnalisation d'une maquette</h2>
             <ul>
                 <li><a href="#section1">À propos</a></li>
                 <li><a href="#exemple">Exemple</a></li>
                 <li><a href="#formulaire">Contact</a></li>
-            </ul>  
-        </nav>     
-        
-        
+            </ul>
+        </nav>
+
+
         <!-- !!!!!!!!!!!!!! SLIDER !!!!!!!!!! -->
         <div id="slide">
             <img src="images/agenceslider-1.jpg" alt="Slide 1">
@@ -53,14 +55,58 @@
     <main>
         <!--SECTION 1 à propos-->
         <section id="section1">
-            <h2 >À propos</h2>
-            <p>Intégration et personnalisation d'une maquette</p>
-            <div>             
-                    <p><span>Cette page est un projet d'intégration d'une maquette.</span> C'est le premier projet que j'ai réalisé pendant ma formation. La conception est basée sur les principes de base du développement front-end, à savoir les languages HTML (mise en page), CSS (mise en forme) et Javascript (intéractivité).</p>
+            <h2>À propos</h2>
+            <div>
+                <div>
+                    <h3>Intégration et personnalisation d'une maquette</h3>
                     <img src="images/maquette.png" alt="maquette">
-                </section>
-                <!-- Barre % -->
-                            </div>
+                    <p id="about"><span>Cette page est un projet
+                            d'intégration d'une maquette.</span> C'est le premier projet que j'ai réalisé pendant ma
+                        formation. La conception est basée sur les principes de base du développement front-end, à
+                        savoir
+                        les languages HTML (mise en page), CSS (mise en forme) et Javascript (intéractivité).</p>
+
+                    <section id="description">
+                        <article>
+                            <i class="far fa-file"></i>
+                            <h2>1-page</h2>
+                            <p>Cette maquette représente un site "vitrine" qui permet de résumer rapidement une
+                                activité.
+                            </p>
+                        </article>
+                        <article>
+                            <i class="fas fa-mobile-alt"></i>
+                            <h2>Responsive</h2>
+                            <p>Le rendu de la page change en fonction de l'appareil utilisé : téléphone, tablette,
+                                ordinateur. La présence et la disposition de certaines fonctionnalité dépends du
+                                matériel du
+                                lecteur.</p>
+                        </article>
+                        <article>
+                            <i class="fas fa-cog"></i>
+                            <h2>Simple</h2>
+                            <p>La construction de cette page a été réalisé avec les technologies de base, c'est à dire
+                                sans
+                                framework ni librairies. </p>
+                        </article>
+                        <article>
+                            <i class="fas fa-camera-retro"></i>
+                            <h2>Images</h2>
+                            <p>Toutes les images sur cette page (et dans mes projets persos en général) sont issues de
+                                ma
+                                bibliothèque personnelle.</p>
+                        </article>
+                    </section>
+
+                </div>
+
+
+
+            </div>
+
+        </section>
+        <!-- Barre % -->
+        </div>
         </section>
         <!--SECTION 2 responsive-->
         <section id="responsive">
@@ -68,50 +114,36 @@
             <p>Cette page est s'adapte à votre appareil : téléphone, tablette ou ordinateur </p>
             <img src="images/parallaxtop.png" alt="Captures d'écran">
         </section>
-                <!--SECTION 4 description-->
-        <section id="description">
-            <article>
-                <i class="far fa-file"></i>
-                <h2>1-page</h2>
-                <p>Cette maquette représente un site "vitrine" qui permet de résumer rapidement une activité.</p>
-            </article>
-            <article>
-                <i class="fas fa-mobile-alt"></i>
-                <h2>Responsive</h2>
-                <p>Le rendu de la page change en fonction de l'appareil utilisé : téléphone, tablette, ordinateur. La présence et la disposition de certaines fonctionnalité dépends du matériel du lecteur.</p>
-            </article>
-            <article>
-                <i class="fas fa-cog"></i>
-                <h2>Simple</h2>
-                <p>La construction de cette page a été réalisé avec les technologies de base, c'est à dire sans framework ni librairies. </p>
-            </article>
-            <article>
-                <i class="fas fa-camera-retro"></i>
-                <h2>Images</h2>
-                <p>Toutes les images sur cette page (et dans mes projets persos en général) sont issues de ma bibliothèque personnelle.</p>
-            </article>
-        </section>
+        <!--SECTION 4 description-->
+
         <!--SECTION 5 exemple-->
         <section id="exemple">
             <h2>Exemple</h2>
-            <p>Un autre exemple de mise en page d'une section prévue pour accueillir du contenu : service, produit, article...</p>
+            <p>Un autre exemple de mise en page d'une section prévue pour accueillir du contenu : service, produit,
+                article...</p>
             <div>
                 <article>
                     <img src="images/service-1.JPG" alt="Ordi">
                     <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque, qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero? Eligendi eos neque nisi!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque,
+                        qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero?
+                        Eligendi eos neque nisi!</p>
                     <p>23/09/2014</p>
                 </article>
                 <article>
                     <img src="images/service-3.JPG" alt="Ordi">
                     <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque, qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero? Eligendi eos neque nisi!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque,
+                        qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero?
+                        Eligendi eos neque nisi!</p>
                     <p>27/09/2014</p>
                 </article>
                 <article>
                     <img src="images/service-2.JPG" alt="Ordi">
                     <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque, qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero? Eligendi eos neque nisi!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque,
+                        qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero?
+                        Eligendi eos neque nisi!</p>
                     <p>21/10/2014</p>
                 </article>
             </div>
@@ -120,12 +152,15 @@
         <section id="evolution">
             <div>
                 <a href="github.com"><img src="images/gitpng.png" alt="git"></a>
-                <a href="http://wordpress.matthieu-m.com"><img id="vortex" src="images/vortexpng.png" alt="monn wordpress"></a>
-                <a href="https://www.instagram.com/matthieu_m12300/?hl=fr"><img src="images/instagrampng.png" alt="Tête 3"></a>
+                <a href="http://wordpress.matthieu-m.com"><img id="vortex" src="images/vortexpng.png"
+                        alt="monn wordpress"></a>
+                <a href="https://www.instagram.com/matthieu_m12300/?hl=fr"><img src="images/instagrampng.png"
+                        alt="Tête 3"></a>
             </div>
             <article>
                 <h2>En Détails</h2>
-                <p>Vous pouvez retrouver les détails et l'évolution de cette page sur Github. Si vous avez envie de tout autre chose, rendez-vous sur mon instagram!</p>
+                <p>Vous pouvez retrouver les détails et l'évolution de cette page sur Github. Si vous avez envie de tout
+                    autre chose, rendez-vous sur mon instagram!</p>
             </article>
         </section>
         <!--SECTION 6 Contact-->
@@ -152,7 +187,8 @@
                 </div>
                 <div class="formalert">
                     <div class="mdp">
-                        <input type="password" placeholder="MOT DE PASSE (vérification)" name="motdepasse2" id="mdpinput2">
+                        <input type="password" placeholder="MOT DE PASSE (vérification)" name="motdepasse2"
+                            id="mdpinput2">
                         <i id="oeil2" class="far fa-eye"></i>
                     </div>
                     <span class="spanalert"></span>
@@ -172,4 +208,5 @@
     <!-- Fichiers JS -->
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
