title changed (shadow added) and menu put on top of the page below header

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <nav>
             <h2>Projet 1 - Intégration et personnalisation d'une maquette</h2>
-            <ul>
+            <ul id="largemenu">
                 <li><a href="#section1">À propos</a></li>
                 <li><a href="#exemple">Exemple</a></li>
                 <li><a href="#formulaire">Contact</a></li>
