responsivity update on a propos + css cleaning and few other updates

--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
         <section id="section1">
             <h2>À propos</h2>
             <div>
+                <h3>Intégration et personnalisation d'une maquette</h3>
+                <p id="about"><span>Cette page est un projet
+                    d'intégration d'une maquette.</span> C'est le premier projet que j'ai réalisé pendant ma
+                formation. La conception est basée sur les principes de base du développement front-end, à
+                savoir
+                les languages HTML (mise en page), CSS (mise en forme) et Javascript (intéractivité).</p>
                 <div>
-                    <h3>Intégration et personnalisation d'une maquette</h3>
                     <img src="images/maquette.png" alt="maquette">
-                    <p id="about"><span>Cette page est un projet
-                            d'intégration d'une maquette.</span> C'est le premier projet que j'ai réalisé pendant ma
-                        formation. La conception est basée sur les principes de base du développement front-end, à
-                        savoir
-                        les languages HTML (mise en page), CSS (mise en forme) et Javascript (intéractivité).</p>
-
-                    <section id="description">
+                    <div id="rightside">
+                   <section id="description">
                         <article>
                             <i class="far fa-file"></i>
                             <h2>1-page</h2>
@@ -97,7 +97,6 @@
                                 bibliothèque personnelle.</p>
                         </article>
                     </section>
-
                 </div>
 
 
