git link changed - slide fixed url needed .JPG

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!-- !!!!!!!!!!!!!! SLIDER !!!!!!!!!! -->
         <div id="slide">
-            <img src="images/agenceslider-1.jpg" alt="Slide 1">
+            <img src="images/agenceslider-1.JPG" alt="Slide 1">
             <div class="titre">
                 <i class="fas fa-globe"></i>
                 <h1>Projet n1</h1>
@@ -150,9 +150,9 @@
         <!--SECTION EVOLUTION-->
         <section id="evolution">
             <div>
-                <a href="github.com"><img src="images/gitpng.png" alt="git"></a>
-                <a href="http://wordpress.matthieu-m.com"><img id="vortex" src="images/vortexpng.png"
-                        alt="monn wordpress"></a>
+                <a href="https://github.com/MM12300/Projet-1"><img src="images/gitpng.png" alt="git"></a>
+                <a href="http://cv.matthieu-m.com"><img id="vortex" src="images/vortexpng.png"
+                        alt="mon site cv"></a>
                 <a href="https://www.instagram.com/matthieu_m12300/?hl=fr"><img src="images/instagrampng.png"
                         alt="Tête 3"></a>
             </div>
