page layout adjustments

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <header>
         <nav>
-            <h2>Projet 1 - Intégration et personnalisation d'une maquette</h2>
+            <h1>Projet 1 - Intégration et personnalisation d'une maquette</h1>
             <ul id="largemenu">
                 <li><a href="#section1">À propos</a></li>
                 <li><a href="#exemple">Exemple</a></li>
@@ -171,7 +171,7 @@
                     <span class="spanalert"></span>
                 </div>
                 <div>
-                    <input type="tel" placeholder="TELEPHONE">
+                    <input maxlength="10" minlength="10" type="tel" placeholder="TELEPHONE">
                 </div>
                 <div>
                     <input type="text" placeholder="E-MAIL" name="email1">
