--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <!--SECTION 6 Contact-->
         <section id="formulaire">
             <h2>Contact form</h2>
+            <h3><i class="fas fa-exclamation-triangle"></i><p>Ce formulaire n'est pas fonctionnel.</p></h3>
             <form class="form" action="#">
                 <div class="formalert">
                     <input type="text" placeholder="NOM (doit contenir entre 5 et 20 caractères)" name="name">
