its time to puse everything for once and for all

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!--SECTION 2 responsive-->
         <section id="responsive">
             <h2>Responsive</h2>
-            <p>Cette page est s'adapte à votre appareil : téléphone, tablette ou ordinateur </p>
+            <p>Cette page s'adapte à votre appareil : téléphone, tablette ou ordinateur </p>
             <img src="images/parallaxtop.png" alt="Captures d'écran">
         </section>
         <!--SECTION 4 description-->
@@ -158,8 +158,7 @@
             </div>
             <article>
                 <h2>En Détails</h2>
-                <p>Vous pouvez retrouver les détails et l'évolution de cette page sur Github. Si vous avez envie de tout
-                    autre chose, rendez-vous sur mon instagram!</p>
+                <p>Vous pouvez retrouver les détails et l'évolution de cette page sur Github. Si vous voulez changer d'air, visitez mon Instagram !</p>
             </article>
         </section>
         <!--SECTION 6 Contact-->
