examples section changed

--- a/index.html
+++ b/index.html
@@ -123,26 +123,20 @@
             <div>
                 <article>
                     <img src="images/service-1.JPG" alt="Ordi">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque,
-                        qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero?
-                        Eligendi eos neque nisi!</p>
+                    <h3>Produit</h3>
+                    <p>Insérez ici une description de votre produit, section personnalisable avec un lien vers le produit concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre imagination.</p>
                     <p>23/09/2014</p>
                 </article>
                 <article>
                     <img src="images/service-3.JPG" alt="Ordi">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque,
-                        qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero?
-                        Eligendi eos neque nisi!</p>
+                    <h3>Service</h3>
+                    <p>Insérez ici une description de votre service, section personnalisable avec un lien vers le service concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre imagination.</p>
                     <p>27/09/2014</p>
                 </article>
                 <article>
                     <img src="images/service-2.JPG" alt="Ordi">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime asperiores quidem doloremque,
-                        qui itaque ullam beatae? Placeat debitis, a aspernatur cumque porro ut aliquid hic libero?
-                        Eligendi eos neque nisi!</p>
+                    <h3>Article</h3>
+                    <p>Insérez ici une description de votre article, section personnalisable avec un lien vers l'article concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre imagination.</p>
                     <p>21/10/2014</p>
                 </article>
             </div>
