add normalize.css next time should do it first

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <!--CSS FILES-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Paytone+One&display=swap" rel="stylesheet">
     <!--STYLE SHEET-->
+        <!-- FONTAWESOME -->
     <link rel="stylesheet" href="css/all.css">
+        <!-- NORMALIZE -->
+    <link rel="stylesheet" href="css/normalize.css">
+        <!-- MY STYLESHEET -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
