--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <!--CSS FILES-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Paytone+One&display=swap" rel="stylesheet">
     <!--STYLE SHEET-->
-        <!-- FONTAWESOME -->
+    <!-- FONTAWESOME -->
     <link rel="stylesheet" href="css/all.css">
-        <!-- NORMALIZE -->
+    <!-- NORMALIZE -->
     <link rel="stylesheet" href="css/normalize.css">
-        <!-- MY STYLESHEET -->
+    <!-- MY STYLESHEET -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -36,8 +36,6 @@
                 <li><a href="#formulaire">Contact</a></li>
             </ul>
         </nav>
-
-
         <!-- !!!!!!!!!!!!!! SLIDER !!!!!!!!!! -->
         <div id="slide">
             <img src="images/agenceslider-1.JPG" alt="Slide 1">
@@ -63,53 +61,47 @@
             <div>
                 <h3>Intégration et personnalisation d'une maquette</h3>
                 <p id="about"><span>Cette page est un projet
-                    d'intégration d'une maquette.</span> C'est le premier projet que j'ai réalisé pendant ma
-                formation. La conception est basée sur les principes de base du développement front-end, à
-                savoir
-                les languages HTML (mise en page), CSS (mise en forme) et Javascript (intéractivité).</p>
+                        d'intégration d'une maquette.</span> C'est le premier projet que j'ai réalisé pendant ma
+                    formation. La conception est basée sur les principes de base du développement front-end, à
+                    savoir
+                    les languages HTML (mise en page), CSS (mise en forme) et Javascript (intéractivité).</p>
                 <div>
                     <img src="images/maquette.png" alt="maquette">
                     <div id="rightside">
-                   <section id="description">
-                        <article>
-                            <i class="far fa-file"></i>
-                            <h2>1-page</h2>
-                            <p>Cette maquette représente un site "vitrine" qui permet de résumer rapidement une
-                                activité.
-                            </p>
-                        </article>
-                        <article>
-                            <i class="fas fa-mobile-alt"></i>
-                            <h2>Responsive</h2>
-                            <p>Le rendu de la page change en fonction de l'appareil utilisé : téléphone, tablette,
-                                ordinateur. La présence et la disposition de certaines fonctionnalité dépends du
-                                matériel du
-                                lecteur.</p>
-                        </article>
-                        <article>
-                            <i class="fas fa-cog"></i>
-                            <h2>Simple</h2>
-                            <p>La construction de cette page a été réalisé avec les technologies de base, c'est à dire
-                                sans
-                                framework ni librairies. </p>
-                        </article>
-                        <article>
-                            <i class="fas fa-camera-retro"></i>
-                            <h2>Images</h2>
-                            <p>Toutes les images sur cette page (et dans mes projets persos en général) sont issues de
-                                ma
-                                bibliothèque personnelle.</p>
-                        </article>
-                    </section>
+                        <div id="description">
+                            <article>
+                                <i class="far fa-file"></i>
+                                <h2>ONE-page</h2>
+                                <p>Cette maquette représente un site "vitrine" qui permet de résumer rapidement une
+                                    activité sur une page unique, limitant ainsi la navigation pour permettre de rendre
+                                    l'information accessible rapidement.
+                                </p>
+                            </article>
+                            <article>
+                                <i class="fas fa-mobile-alt"></i>
+                                <h2>Responsive</h2>
+                                <p>Le rendu de la page change en fonction de l'appareil utilisé : téléphone, tablette,
+                                    ordinateur. La présence et la disposition de certaines fonctionnalité dépends de la
+                                    taille de l'écran.</p>
+                            </article>
+                            <article>
+                                <i class="fas fa-cog"></i>
+                                <h2>Simple</h2>
+                                <p>La construction de cette page a été réalisé sans frameworks ni librairies :
+                                    uniquement des flexboxs et du Javascript dit "vanilla". </p>
+                            </article>
+                            <article>
+                                <i class="fas fa-camera-retro"></i>
+                                <h2>Images</h2>
+                                <p>Toutes les images sur cette page (et dans mes projets persos en général) sont issues
+                                    de
+                                    ma
+                                    bibliothèque personnelle.</p>
+                            </article>
+                        </div>
+                    </div>
                 </div>
-
-
-
             </div>
-
-        </section>
-        <!-- Barre % -->
-        </div>
         </section>
         <!--SECTION 2 responsive-->
         <section id="responsive">
@@ -121,26 +113,31 @@
 
         <!--SECTION 5 exemple-->
         <section id="exemple">
-            <h2>Exemple</h2>
+            <h2>Vignettes</h2>
             <p>Un autre exemple de mise en page d'une section prévue pour accueillir du contenu : service, produit,
                 article...</p>
             <div>
                 <article>
                     <img src="images/service-1.JPG" alt="Ordi">
                     <h3>Produit</h3>
-                    <p>Insérez ici une description de votre produit, section personnalisable avec un lien vers le produit concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre imagination.</p>
+                    <p>Insérez ici une description de votre produit, section personnalisable avec un lien vers le
+                        produit concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre
+                        imagination.</p>
                     <p>23/09/2014</p>
                 </article>
                 <article>
                     <img src="images/service-3.JPG" alt="Ordi">
                     <h3>Service</h3>
-                    <p>Insérez ici une description de votre service, section personnalisable avec un lien vers le service concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre imagination.</p>
+                    <p>Insérez ici une description de votre service, section personnalisable avec un lien vers le
+                        service concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre
+                        imagination.</p>
                     <p>27/09/2014</p>
                 </article>
                 <article>
                     <img src="images/service-2.JPG" alt="Ordi">
                     <h3>Article</h3>
-                    <p>Insérez ici une description de votre article, section personnalisable avec un lien vers l'article concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre imagination.</p>
+                    <p>Insérez ici une description de votre article, section personnalisable avec un lien vers l'article
+                        concerné à l'aide d'un bouton... tout est possible. Une seule limite : votre imagination.</p>
                     <p>21/10/2014</p>
                 </article>
             </div>
@@ -148,21 +145,25 @@
         <!--SECTION EVOLUTION-->
         <section id="evolution">
             <div>
-                <a href="https://github.com/MM12300/Projet-1"><img src="images/gitpng.png" alt="git"></a>
-                <a href="http://cv.matthieu-m.com"><img id="vortex" src="images/vortexpng.png"
-                        alt="mon site cv"></a>
-                <a href="https://www.instagram.com/matthieu_m12300/?hl=fr"><img src="images/instagrampng.png"
-                        alt="Tête 3"></a>
+                <div>
+                    <h2>En Détails</h2>
+                </div>
+                <div><a href="https://github.com/MM12300/Projet-1"><img src="images/gitpng.png" alt="git"></a>
+                    <a href="http://cv.matthieu-m.com"><img id="vortex" src="images/vortexpng.png"
+                            alt="mon site cv"></a>
+                    <a href="https://www.instagram.com/matthieu_m12300/?hl=fr"><img src="images/instagrampng.png"
+                            alt="Tête 3"></a>
+                    <p>Vous pouvez retrouver les détails et l'évolution de cette page sur Github. Si vous voulez changer
+                        d'air, visitez mon Instagram !</p>
+                </div>
             </div>
-            <article>
-                <h2>En Détails</h2>
-                <p>Vous pouvez retrouver les détails et l'évolution de cette page sur Github. Si vous voulez changer d'air, visitez mon Instagram !</p>
-            </article>
         </section>
         <!--SECTION 6 Contact-->
         <section id="formulaire">
-            <h2>Contact form</h2>
-            <h3><i class="fas fa-exclamation-triangle"></i><p>Ce formulaire n'est pas fonctionnel.</p></h3>
+            <h2>Contact</h2>
+            <h3><i class="fas fa-exclamation-triangle"></i>
+                <p>Ce formulaire n'est pas fonctionnel.</p>
+            </h3>
             <form class="form" action="#">
                 <div class="formalert">
                     <input type="text" placeholder="NOM (doit contenir entre 5 et 20 caractères)" name="name">
