--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
 
 <body id="top">
     <!-- !!!!!!!!!!!!!! MENU!!!!!!!!!! -->
-    <div id="menu">
-        <button type="button" id="bouton"><i class="fas fa-bars"></i></button>
-        <ul>
-            <li><a href="#section1">À propos</a></li>
-            <li><a href="#exemple">Exemple</a></li>
-            <li><a href="#formulaire">Contact</a></li>
-        </ul>
-    </div>
     <header>
         <nav>
             <h1>Projet 1 - Intégration et personnalisation d'une maquette</h1>
-            <ul id="largemenu">
+            <div id="menularge">
                 <li><a href="#section1">À propos</a></li>
                 <li><a href="#exemple">Exemple</a></li>
                 <li><a href="#formulaire">Contact</a></li>
-            </ul>
+            </div>
+            <div id="menu">
+                <button type="button" id="bouton"><i class="fas fa-bars"></i></button>
+                <ul>
+                    <li><a href="#section1">À propos</a></li>
+                    <li><a href="#exemple">Exemple</a></li>
+                    <li><a href="#formulaire">Contact</a></li>
+                </ul>
+            </div>
         </nav>
         <!-- !!!!!!!!!!!!!! SLIDER !!!!!!!!!! -->
         <div id="slide">
