Revert "new menu, the ancien wont work?"
This reverts commit 8bf11aae

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
 
 <body id="top">
     <!-- !!!!!!!!!!!!!! MENU!!!!!!!!!! -->
+    <div id="menu">
+        <button type="button" id="bouton"><i class="fas fa-bars"></i></button>
+        <ul>
+            <li><a href="#section1">À propos</a></li>
+            <li><a href="#exemple">Exemple</a></li>
+            <li><a href="#formulaire">Contact</a></li>
+        </ul>
+    </div>
     <header>
         <nav>
             <h1>Projet 1 - Intégration et personnalisation d'une maquette</h1>
-            <div id="menularge">
+            <ul id="largemenu">
                 <li><a href="#section1">À propos</a></li>
                 <li><a href="#exemple">Exemple</a></li>
                 <li><a href="#formulaire">Contact</a></li>
-            </div>
-            <div id="menu">
-                <button type="button" id="bouton"><i class="fas fa-bars"></i></button>
-                <ul>
-                    <li><a href="#section1">À propos</a></li>
-                    <li><a href="#exemple">Exemple</a></li>
-                    <li><a href="#formulaire">Contact</a></li>
-                </ul>
-            </div>
+            </ul>
         </nav>
         <!-- !!!!!!!!!!!!!! SLIDER !!!!!!!!!! -->
         <div id="slide">
