--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Projet 1 - Intégration et personnalisation d'une maquette</h1>
             <ul id="largemenu">
                 <li><a href="#section1">À propos</a></li>
-                <li><a href="#exemple">Exemple</a></li>
+                <li id="bordermenu"><a href="#exemple">Exemple</a></li>
                 <li><a href="#formulaire">Contact</a></li>
             </ul>
         </nav>
