--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <section id="formulaire">
             <h2>Contact</h2>
             <h3><i class="fas fa-exclamation-triangle"></i>
-                <p>Ce formulaire n'est pas fonctionnel.</p>
+                <p>Ce ceci est un formulaire fictif : il ne permet pas de me contacter.</p>
             </h3>
             <form class="form" action="#">
                 <div class="formalert">
@@ -191,7 +191,7 @@
                     </div>
                     <span class="spanalert"></span>
                 </div>
-                <button>Confirmer</button>
+                <div id="button">Confirmer</div>
             </form>
         </section>
     </main>
