--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
         <!--SECTION 6 Contact-->
         <section id="formulaire">
             <h2>Contact</h2>
-            <h3><i class="fas fa-exclamation-triangle"></i>
-                <p>Ce ceci est un formulaire fictif : il ne permet pas de me contacter.</p>
-            </h3>
+            <div><i class="fas fa-exclamation-triangle"></i>
+                <p>Ce formulaire n'est pas fonctionnel.</p>
+            </div>
             <form class="form" action="#">
                 <div class="formalert">
                     <input type="text" placeholder="NOM (doit contenir entre 5 et 20 caractères)" name="name">
